# fastapi_skeleton

./: .gitignore  Dockerfile  LICENSE  README.md  config.toml  logging.yaml  pyproject.toml  requirements.txt  ruff.toml  run_app.sh  run_debug.sh
app/: config.py  context.py  logging.py  main.py  meta.py  middleware.py
app/core/: errors.py  views.py
app/tests/: test_main.py
app/v1/: errors.py  views.py
src/app/: config.py  context.py  logging.py  main.py  middleware.py  settings.py
src/app/core/: router.py  schema.py
src/app/v1/: router.py
tests/: test_main.py
