[tool.poetry]
name = "fastapi_skeleton"
version = "0.1.0"
description = ""
authors = ["Steffen <steffen.haeussler.work@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.0"
fastapi = ">=0.110.0"
uvicorn = ">=0.18.3"
loguru = ">=0.6.0"

[tool.poetry.dev-dependencies]
black = ">=24.3.0"
pytest = ">=7.1.2"
pytest-cov = ">=3.0.0"
requests = ">=2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
