[project]
name = "fastapi_skeleton"
version = "0.1.0"
description = "fastapi_skeleton"
authors = [{"name" = "Steffen Häußler", email = "steffen.haeussler.work@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "fastapi>=0.115.6",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/.venv",
    "*/__pycache__",
    "/.pytest_cache",
    "/dist",
    ".coverage",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
configuration = "ruff.toml"

